Fixing footer overflow

--- a/style.css
+++ b/style.css
@@ -937,25 +937,35 @@ footer .bottom-footer img {
     position: relative;
     width: 100%;
   }
-  footer .sub-wrapper {
-  }
   footer .bottom-footer {
     position: absolute;
     left: 15px;
     right: 15px;
     bottom: 0px;
   }
-  @media screen and (max-width: 600px) {
-    footer .sub-wrapper {
-      flex-direction: column;
-      margin-bottom: 0;
-    }
-    footer .sub-wrapper > p {
-      margin-bottom: 22px;
-    }
-    footer .bottom-footer {
-      flex-direction: column-reverse;
-    }
+}
+@media screen and (max-width: 600px) {
+  footer .sub-wrapper {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  footer .sub-wrapper > p {
+    margin-bottom: 22px;
+  }
+  footer .bottom-footer {
+    flex-direction: column-reverse;
+  }
+  footer .sub-wrapper > * {
+    width: 100%;
+  }
+  .wrapper > img {
+    width: 261px;
+  }
+  footer .sub-wrapper p {
+    line-height: 20px;
+  }
+  footer .bottom-footer p {
+    font-size: 16px;
   }
 }
 
